[package]
name = "enr"
version = "0.1.0"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"

[dependencies]
libp2p-core = { version = "0.12.0", path = "../../core" }
rlp = "0.4.3"
log = "0.4.8"
libsecp256k1 = "0.3.1"
sha3 = "0.8.2"
bs58 = "0.3.0"
base64 = "0.10.1"
rand = "0.7.2"
serde = { version = "1.0.93", optional = true }
hex = "0.4.0"
